Fixing construction animation overflow

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -15,8 +15,9 @@ footer .footer-copyright{
   height: 2.6em !important;
   line-height: 2.6em !important;
   padding-top: 0.2em !important;
+
   img{
-    width:4em;
-    padding-left:1em;
+    width:3em;
+    padding-left:0.3em;
   }
 }
